# calendar-summaries

./: .gitignore  README.md  config.py  main.py  pyproject.toml
templates/: weekly-email.html.jinja2
